	- validator validates referral messages, by validating all the rrsets
	  and stores the rrsets in the cache. Further referral (nonRD queries)
	  replies are made from the rrset cache directly. Unless unchecked
	  rrsets are encountered, there are then validated.
	- enforce that signing is done by a parent domain (or same domain).
	- adjust TTL downwards if rrset TTL bigger than signature allows.

27 August 2007: Wouter
	- do not garble the edns if a cache answer fails.
	- answer norecursive from cache if possible.
	- honor clean_additional setting when returning secure non-recursive
	  referrals.
	- do not store referral in msg cache for nonRD queries.
	- store verification status in the rrset cache to speed up future
	  verification.
	- mark rrsets indeterminate and insecure if they are found to be so.
	  and store this in the cache.

24 August 2007: Wouter
	- message is bogus if unsecure authority rrsets are present.
	- val-clean-additional option, so you can turn it off.
	- move rrset verification out of the specific proof types into one
	  routine. This makes the proof routines prettier.
	- fixup cname handling in validator, cname-to-positive and cname-to-
	  nodata work.
	- Do not synthesize DNSKEY and DS responses from the rrset cache if
	  the rrset is from the additional section. Signatures may have
	  fallen off the packet, and cause validation failure.
	- more verbose signature date errors (with the date attached).
	- increased default infrastructure cache size. It is important for
	  performance, and 1000 entries are only 212k (or a 400 k total cache
	  size). To 10000 entries (for 2M entries, 4M cache size).

23 August 2007: Wouter
	- CNAME handling - move needs_validation to before val_new().
	  val_new() setups the chase-reply to be an edited copy of the msg.
	  new classification, and find signer can find for it. 
	  removal of unsigned crap from additional, and query restart for
	  cname.
	- refuse to follow wildcarded DNAMEs when validating.